--- a/javaservletdemo/src/main/webapp/WEB-INF/web.xml
+++ b/javaservletdemo/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,17 @@
 
 <web-app>
     <display-name>Java Servlet Demo</display-name>
+    <filter>
+        <filter-name>myFilter</filter-name>
+        <filter-class>com.sboo.MyFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>myFilter</filter-name>
+        <servlet-name>hello</servlet-name>
+    </filter-mapping>
+    <listener>
+        <listener-class>com.sboo.MyListener</listener-class>
+    </listener>
     <servlet>
         <servlet-name>hello</servlet-name>
         <servlet-class>com.sboo.HelloServlet</servlet-class>
