--- a/javaservletdemo/pom.xml
+++ b/javaservletdemo/pom.xml
@@ -34,12 +34,7 @@
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
-      <artifactId>spring-core</artifactId>
-      <version>5.2.9.RELEASE</version>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-context</artifactId>
+      <artifactId>spring-webmvc</artifactId>
       <version>5.2.9.RELEASE</version>
     </dependency>
   </dependencies>
